# dotipe

./: .editorconfig  .gitignore  README.md  dotipe.toml  pyproject.toml
dotipe/: config_handler.py  core.py  dotipe.py  dotipe_config.py  files_comparator.py  files_handler.py  main.py  retriver.py  utils.py
dotipe/cli/: dotipe.py  dotipe_cli.py
dotipe/core/: config_handler.py  consts.py  files_handler.py  retriever.py  retriver.py
dotipe/facade/: dotipe.py  dotipe_facade.py
test/: mocks.py  test_config_handler.py  test_dotipe.py  test_dotipe_config.py  test_files_comparator.py  test_files_handler.py  test_retriever.py  test_utils.py
test/mock_home_folder/: dotipe.toml
test/mock_home_folder/example_project/src/: x
test/mock_home_folder/multiple/ignore/: ignored.json
test/mock_home_folder/multiple/js/: main.js
test/mock_home_folder/tmp/example_project/src/: init.lua  x
tests/tests_core/: mocks.py  test_config_handler.py  test_files_handler.py  test_retriever.py  test_retriver.py
tests/tests_core/mock_home_folder/: dotipe.toml
tests/tests_core/mock_home_folder/complete_test_project/: README.md
tests/tests_core/mock_home_folder/complete_test_project/src/my_module/: module.py
tests/tests_core/mock_home_folder/dotipe_config/: dotipe.toml
tests/tests_core/mock_home_folder/project_to_compare_one/: with_diff
tests/tests_core/mock_home_folder/project_to_compare_two/: with_diff
tests/tests_core/mock_home_folder/tmp/: .gitkeep
tests/tests_core/mock_home_folder/tmp/complete_test_project/src/my_module/: module.py
