[tool.poetry]
name = "dotipe"
version = "0.1.0"
description = ""
authors = ["Felipe Alves <alves.n.felipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
