[tool.poetry]
name = "dotipe"
version = "0.1.0"
description = ""
authors = ["Felipe Alves <alves.n.felipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
black = "^24.4.2"
requests = "^2.31.0"
typer = "^0.12.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
